--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 *.csv filter=lfs diff=lfs merge=lfs -text
+Africa_2010-2021.csv filter=lfs diff=lfs merge=lfs -text
+Terrorism[[:space:]]2000-2019.pkl filter=lfs diff=lfs merge=lfs -text
