--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ streamlit==1.3.0
 newsapi-python==0.2.6
 bokeh==2.4.1
 streamlit-aggrid==0.2.2.post4
+convertdate==2.3.2
 prophet==1.0.1
 wbgapi==1.0.7
 streamlit-authenticator==0.1.0
+convertdate==2.3.2
